# WeBucket-API

./: .gitignore  README.md  bitbucket-pipelines.yml  pyproject.toml
src/: __init__.py  auth.py  config.py  main.py  schema.py
tests/: conftest.py  test_main.py
